fix(home): center align items in home container

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
-  text-align: center;
+  align-items: center;
+  /* text-align: center; */
 }
